# Homework_web_10

./: .gitignore  pyproject.toml
pict_u_res/: manage.py
pict_u_res/app_pict/: apps.py
pict_u_res/pict_u_res/: asgi.py  settings.py  urls.py  wsgi.py
quotesite/app_quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotesite/app_quotes/migrations/: 0001_initial.py  0002_author_user_quote_user.py  0002_remove_author_user_remove_quote_user.py  0003_alter_tag_name.py  0003_tag_remove_quote_tags_quote_tags.py
quotesite/app_quotes/sources/: quotes.json
quotesite/app_quotes/templates/app_quotes/: author.html  base.html  create_author.html  create_quote.html  index.html  page.html  quote.html  search.html  tag.html
quotesite/quotesite/: asgi.py  settings.py  urls.py  wsgi.py
quotesite/users/: forms.py  urls.py  views.py
quotesite/users/templates/users/: login.html  logout.html  password_reset_done.html  register.html
